# kickstart

./: .gitignore  AGENTS.md  Dockerfile  MIGRATION.md  README.md  bootstrap.sh  build.sh  chroot.sh  config.json  kickstart.py  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: build.yml
chimeralinux/: chroot.sh  kickstart.sh
config/void/: base.json  defaults.json  defaults.void  mirrors.json  mirrors.void  pkgs.json
legacy/: Dockerfile  README.md  config.json
legacy/src/: ascii.py  profiles.py  steps.py  utils.py
legacy/src/distros/: void.py
pkgs/: base.void  pkgs.void
profiles/: minimal.json  niri.json
profiles/void/: minimal.json  niri.json
src/: ansi_codes.py  ascii.py  ascii_art.py  chroot.py  context.py  header.py  input.py  profiles.py  registry.py  status.py  steps.py  tui.py  types.py  utils.py  validations.py
src/distros/: __init__.py  arch.py  generic.py  linux.py  protocol.py  void.py
void/: chroot.sh  kickstart.sh  pkgs
