[project]
name = "void.kickstart"
version = "0.1.0"
description = "A user-friendly, automated installer for Void Linux, designed to simplify and streamline the installation process."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.basedpyright]
pythonVersion = "3.12"
strict = true
