[project]
name = "kickstart"
version = "0.1.0"
description = "A user-friendly, automated installer for supported Linux distros, designed to simplify and streamline the installation process."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.basedpyright]
pythonVersion = "3.12"
strict = []
